<resources>
    <string name="release_date">17-09-2019</string>
    <string name="filter_level">3</string>
    <string name="about_us_txt"> \t Anand Milk Union Limited or Amul is an Indian cooperative dairy company, based at Anand in the state of Gujarat.\n\n
\t Formed in 1948, it is a cooperative brand managed by a cooperative body, the Gujarat Co-operative Milk Marketing Federation Ltd. (GCMMF), which today is jointly owned by 3.6 million milk producers in Gujarat.
Amul spurred Indias White Revolution, which made the country the worlds largest producer of milk and milk products.\n\n
\t White revolution was spearheaded by Tribhuvandas Patel under the guidance of Sardar Patel. As a result, Kaira District Milk Union Limited was born in 1946. Tribhuvandas became the founding chairman of the organization and led it until his death. He hired Dr. Verghese Kurien three years after the white revolution. He convinced Dr. Kurien to stay and help with the mission.</string>
    <string name="download_local_url">redirect/download</string>
    <string name="download_distMaster_url">controller/download</string>
    <string name="upload_local_url">controller/upload</string>
    <string name="app_name">SSFA</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="channel">Channel*</string>
    <string name="group">Group*</string>
    <string name="retailer_class">Class*</string>
    <string name="retailer_name">Retailer Name </string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="tin">Tin</string>
    <string name="zip">Zip*</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="product_filter">Product Filter</string>
    <string name="select_category">Select Category</string>
    <string name="select_brand">Select Brand</string>
    <string name="based_on_stocks">Based on Stocks</string>
    <string name="all">All</string>
    <string name="zero">Zero</string>
    <string name="non_zero">Non Zero</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="enter_minimum_char">Enter Product Name Or Code</string>
    <string name="add">Add</string>
    <string name="no_record">No Record</string>
    <string name="next">Next</string>
    <string name="view_cart">View Cart</string>
    <string name="validate">Validate</string>
    <string name="invoice_no">Invoice No</string>
    <string name="due_since">Due Since</string>
    <string name="balance">Balance</string>
    <string name="submit">Submit</string>
    <string name="place_order">Place Order</string>
    <string name="update_location">Update Location</string>
    <string name="null_val">null</string>
    <string name="invoice">Invoice</string>
    <string name="cgst">CGST % </string>
    <string name="sgst">SGST % </string>
    <string name="igst">IGST % </string>
    <string name="cesscaps">CESS % </string>
    <string name="remarks">Enter Remarks (Optional)</string>
    <string name="ERR_INTERNAL_SERVER">Internal Server Error</string>
    <string name="ERR_SYNCFAIL">Sync failed, Please try again</string>
    <string name="MSG_DLSUCCESS">Download Successful</string>
    <string name="MSG_APK_DL_FAILED">Sorry, Apk download failed.</string>
    <string name="MSG_UPLOADSUCCESS">Upload Successful.</string>
    <string name="MSG_NONETCONNECTION">No Network connection </string>
    <string name="MSG_LOADING">Loading…</string>
    <string name="MSG_ORDER_PROCESSING">Order Processing…</string>
    <string name="MSG_NEW_APK">A new apk version is available. Please download and install now.</string>
    <string name="MSG_Perform_sync">Please Sync to proceed.</string>
    <string name="codification_success">Codification successful</string>
    <string name="codification_failure">Codification failed</string>
    <string name="logout_failure">Logout failed</string>
    <string name="MSG_Logout">Do you want to logout ?</string>
    <string name="logout_previous_user">This phone is already mapped to some other user. Kindly logout from previous user and login to the current user.</string>
    <string name="title_downloading">Downloading</string>
    <string name="Rs">\u20B9</string>
    <string name="rs_string">\u20B9 %s</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="select_channel">Select Channel</string>
    <string name="select_state_name">Select State</string>
    <string name="select_group">Select Group</string>
    <string name="select_sub_channel">Select SubChannel</string>
    <string name="select_class">Select Class</string>
    <string name="s_qty">S.Qty</string>
    <string name="l_total">L.Total</string>
    <string name="product_not_ava_err">Product not available</string>
    <string name="quantity">Quantity</string>
    <string name="stock">Stock</string>
    <string name="err_no_valid_order">You did not place any order yet!</string>
    <string name="success_dialog">Successfully Authenticated</string>
    <string name="no_recods_found">No Records Found</string>
    <string name="page">Page :</string>
    <string name="scheme_empty">Scheme Not Available</string>
    <string name="scheme_detail">Scheme Details</string>
    <string name="user_name">User Code/Mobile No</string>
    <string-array name="faq_question_array">
        <item>(1) Location update</item>
        <item>(2) Coverage Plan</item>
        <item>(3) SYNC failed</item>
        <item>(4) Crash Report</item>
    </string-array>
    <string name="days">Days</string>
    <string-array name="gps_signal_ans">
        <item>* Kill the app</item>
        <item>* Switch on the data/Wi-Fi (whatever is available)</item>
        <item>* Switch on GPS</item>
        <item>* Open the app and check</item>
        <item>* If all this do not work, then update Google Map application and Google Play Store</item>
    </string-array>
    <string-array name="coverage_ans">
        <item>* If coverage dialog is show</item>
        <item>* Contact to your distributor.</item>
        <item>* Tag the beat and do mobile sync in XDM.</item>
    </string-array>
    <string-array name="sync_failed_ans">
        <item>* Restart the application</item>
        <item>* Check the data connection – This can be because of very low data speed</item>
        <item>* Try sync </item>

    </string-array>
    <string-array name="crash_report_ans">
        <item>* If  SSFA app is crash</item>
        <item>* Crash report will generate</item>
        <item>* Please send the crash report through mail.</item>
    </string-array>
    <string name="google_maps_key">AIzaSyA5N5nO4AEgdvbPPjeD9qp_WzlIKRaVaCo</string>
    <string name="msg_contact_distributor">Please contact administrator.</string>
    <string name="available_bluetooth_device">Available Bluetooth Device</string>
    <string name="qty">Qty</string>
    <string name="rate">Rate</string>
    <string name="contact">Contact</string>
    <string name="product">Product</string>
    <string name="quote">:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="select_image">Select Image from Gallery Or Capture from camera</string>
    <string name="tax">Tax</string>
    <string name="gst_no">GSTIN No*</string>
    <string name="pan_no">PAN No</string>
    <string name="message_not_available">Message Not Available</string>
    <string name="count">count</string>
    <string name="ERR_GST">GSTIN No must be valid alphanumeric 15 digits characters</string>
    <string name="ERR_lat_lng">Wait until current location is captured! or Try again Later!</string>
    <string name="ERR_Pan">PAN No must be valid alphanumeric 10 digits characters</string>
    <string name="distributor_code">Distributor Code</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="search">Search</string>
    <string name="title_activity_mtddetail">""</string>
    <string name="label_stk">STK</string>
    <string name="label_Ord">ORD</string>
    <string name="free_product">Free Product</string>
    <string name="tentative_discount"><u>Sch Disc</u></string>
    <string name="tentative_line_val">Tentative Line Value</string>
    <string name="error_return_type">Select Return Type</string>
    <string name="error_invoice_no">Enter Invoice No Or GRN No</string>
    <string-array name="dropdown_quick_access">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>
    <string-array name="lang_dropdown">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="dropdown_prod_filer">
        <item>Product 1 Filter</item>
        <item>Product 2 Filter</item>
        <item>Category Filter</item>
        <item>Brand Filter</item>
    </string-array>
    <string name="filter_one">Product 1 Filter</string>
    <string name="filter_two">Product 2 Filter</string>
    <string name="filter_three">Category Filter</string>
    <string name="filter_four">Brand Filter</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Messages</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Search</string>
    <string name="menu_search">Search Menu</string>
    <string name="sub_channel">Sub-channel*</string>
    <string name="address_1">Address 1*</string>
    <string name="order_count">Order Count :</string>
    <string name="instock_count">InStock Count :</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="about_us">About Us</string>
    <string name="usbsync">Usb Sync</string>
    <string name="net_amt">Net Amt</string>
    <string name="stock_upload_msg">Do you want to upload previous day VAN sales stocks ?</string>
    <string name="full">Full</string>
    <string name="partial">Partial</string>
    <string name="total">Total</string>
    <string name="enter_invoice_no">Enter Invoice No</string>
    <string name="language">Language</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="brand_name">Brand Name</string>
    <string name="ord_val">Ord Val</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="notification">Notification</string>
    <string name="login">Login</string>
    <string name="modDt">Date</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="mtd_dashboard">MTD Dashboard</string>
    <string name="total_u20b9">Total : ₹ </string>
    <string name="discount">Discount</string>
    <string name="alert">Alert</string>
    <string name="at_a_time_you_can_do_one_operation">At a time you can do one operation, save the data and come again to do the other operation.</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="op_stock">Op.Stock</string>
    <string name="op_stock_val">Op.Stock Val</string>
    <string name="cl_stock">Cl.Stock</string>
    <string name="cl_stock_val">Cl.Stock Val</string>
    <string name="ord_qty">Ord.Qty</string>
    <string name="no_record_found">No Record Found</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="lob_filter">LOB Filter</string>
</resources>