<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/route_search"
        android:icon="@drawable/search_icon"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/product_filter"
        android:icon="@drawable/filter"
        android:orderInCategory="2"
        android:title="@string/filter"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/count_bubble"
        android:orderInCategory="5"
        android:actionLayout="@layout/coverage_msg"
        android:title="@string/count"
        app:showAsAction="always" />

</menu>