<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fingerprint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_description"
        android:textColor="?android:attr/textColorSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fingerprint_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_fingerprint_icon"
            android:src="@drawable/ic_fp_40px" />

        <TextView
            android:id="@+id/fingerprint_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/fingerprint_hint"
            android:textColor="@color/color_red" />

    </LinearLayout>
</LinearLayout>