<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_size_medium" />

        <LinearLayout
            android:id="@+id/tax_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/cgst"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_normal" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/sgst"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_normal" />


            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/igst"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_normal" />


            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/cesscaps"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_normal" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tax_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tax_list_empty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:drawableTop="@drawable/sad"
            android:drawablePadding="10dp"
            android:text="@string/no_record"
            android:textSize="@dimen/txt_size_normal" />

    </LinearLayout>
</RelativeLayout>
