<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_text" />

    <HorizontalScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="8"
                    android:minEms="8"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/product_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/op_stock"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/op_stock_val"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/ord_qty"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/ord_val"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/cl_stock"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxEms="4"
                    android:minEms="4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/cl_stock_val"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_semi_medium" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stock_summary_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/stock_sum_empty_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/sad"
                    android:gravity="center"
                    android:text="@string/no_record"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/txt_size_large"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/stock_tot_qty_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_normal"
            android:typeface="serif" />

        <TextView
            android:id="@+id/stock_tot_amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_normal"
            android:typeface="serif" />

    </LinearLayout>-->
</LinearLayout>
