<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/return_ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_delete"
            android:contentDescription="@string/null_val" />

        <TextView
            android:id="@+id/return_date_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="4"
            android:maxLines="1"
            android:minEms="4"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="1dp"
            android:paddingEnd="1dp"
            android:text="@string/modDt"
            android:textColor="@color/color_prod_txt"
            android:textSize="@dimen/txt_size_semi_medium" />

        <TextView
            android:id="@+id/return_grn_no_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxEms="5"
            android:maxLines="1"
            android:minEms="5"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_semi_medium"
            android:typeface="serif" />

        <TextView
            android:id="@+id/return_invoice_no_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxEms="5"
            android:maxLines="1"
            android:minEms="5"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_semi_medium"
            android:typeface="serif" />

        <TextView
            android:id="@+id/return_invoice_amt_txt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxEms="5"
            android:maxLines="1"
            android:minEms="5"
            android:padding="5dp"
            android:text="@string/_0_00"
            android:textColor="@color/color_red"
            android:textSize="@dimen/txt_size_semi_medium"
            android:typeface="serif" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_bg"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/return_reason_spinner"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="@string/_0_00"
                android:textColor="@color/color_prod_txt"
                android:textSize="@dimen/txt_size_semi_medium"
                android:typeface="serif" />


        </LinearLayout>


        <EditText
            android:id="@+id/return_remarks_edt"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_bg"
            android:hint="@string/enter_remarks"
            android:maxLines="1"
            android:padding="5dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_semi_medium"
            android:typeface="serif" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
