<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/qtydialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:animateLayoutChanges="true"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/retailer_name_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/alert"
            android:textColor="@color/color_light_red"
            android:textSize="@dimen/txt_size_medium"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_list_divider" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/at_a_time_you_can_do_one_operation"
            android:textColor="@color/color_prod_txt"
            android:textSize="@dimen/txt_size_semi_medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/msg_ok_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:text="@string/ok"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>