<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.ProductMasterActivity"
    android:background="@color/color_creamBg1">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/custom_toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/lob_filter_btn"
            android:layout_width="0dp"
            android:background="@drawable/edit_bg"
            android:layout_height="match_parent"
            android:text="@string/lob_filter"
            android:textColor="@color/black"
            android:layout_weight="1" />

        <Button
            android:id="@+id/brand_filter_btn"
            android:layout_width="0dp"
            android:background="@drawable/edit_bg"
            android:layout_height="match_parent"
            android:text="@string/product_filter"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/products_empty_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/sad"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/no_record_found"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_size_medium"
            android:typeface="serif"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/product_list_adapter_layout"/>

    </RelativeLayout>

</LinearLayout>